# django-attendance-calendar

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
attendance_calendar/: __init__.py  admin.py  apps.py
attendance_calendar/static/attendance_calendar/css/: base.css  dashboard.css
attendance_calendar/static/attendance_calendar/css/schemes/: corporate.css  default.css  monochrome.css  pastel.css  vibrant.css
attendance_calendar/static/attendance_calendar/css/themes/: dark.css  light.css
attendance_calendar/static/attendance_calendar/js/: calendar.js
attendance_calendar/templates/attendance_calendar/: calendar.html  dashboard.html
attendance_calendar/templatetags/: __init__.py  attendance_tags.py
example_project/: dashboard_output.html  dashboard_output2.html
example_project/demo/: settings.py  urls.py  views.py
example_project/demo/templates/demo/: all_features.html  calendar_dark.html  calendar_demo.html  dashboard_demo.html  screenshots.html
screenshots/: README.md
